Casos de uso criticos funcionales y organizacion de los datatypes en carpetas